feat: 学生登录/独立视图/课堂模块/数学默认值调整 v1.0.23
- 学生端独立登录（学号+班级密码）+ StudentHomeView
- 课堂模块：语文(52首唐诗/拼音注音/声母韵母翻转卡/声调)、数学(四则运算/九九乘法表)、英语(26字母翻转卡+发音)
- JWT滑动续期修复：学生请求用generateStudentToken保留studentId
- 学号显示修复：auth store显式存studentNo
- 数学四则运算默认值：maxNum=10, 仅加减法
- SpController/SecurityConfig放行学生路由
- ItemType兼容petCard和pet_change_card
- ClassroomController/ClassroomService/Classroom实体新增
- StudentApiController学生独立API端点