@@ -12,7 +12,8 @@ import org.springframework.util.StringUtils;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -37,10 +38,28 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
             log.debug("[JWT Filter] Token valid for URI: {}", uri);
             String username = tokenProvider.getUsernameFromToken(token);
             String teacherId = tokenProvider.getTeacherIdFromToken(token);
-            AuthenticatedTeacher principal = new AuthenticatedTeacher(username, teacherId);
+            String role = tokenProvider.getRoleFromToken(token);
+            String studentId = tokenProvider.getStudentIdFromToken(token);
+            
+            AuthenticatedUser principal;
+            if ("student".equals(role)) {
+                principal = new AuthenticatedUser(username, teacherId, "student", studentId);
+            } else {
+                principal = new AuthenticatedUser(username, teacherId, "teacher", null);
+            }
             UsernamePasswordAuthenticationToken auth =
-                    new UsernamePasswordAuthenticationToken(principal, null, Collections.emptyList());
+                    new UsernamePasswordAuthenticationToken(principal, null, 
+                        "student".equals(role) 
+                            ? List.of(new SimpleGrantedAuthority("ROLE_STUDENT"))
+                            : List.of());
             SecurityContextHolder.getContext().setAuthentication(auth);
+
+            // 滑动过期：签发新 Token，通过响应头返回给前端
+            // 学生用 generateStudentToken（包含 studentId），老师用 generateToken
+            String newToken = "student".equals(role)
+                    ? tokenProvider.generateStudentToken(username, teacherId, studentId)
+                    : tokenProvider.generateToken(username, teacherId, role);
+            response.setHeader("X-New-Token", newToken);
         }
         filterChain.doFilter(request, response);
     }
@@ -53,5 +72,7 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
         return null;
     }
 
-    public record AuthenticatedTeacher(String username, String teacherId) {}
+    public record AuthenticatedUser(String username, String teacherId, String role, String studentId) {
+        public boolean isStudent() { return "student".equals(role); }
+    }
 }
